Теперь можно запрашивать историю моенты по её имени,а не по id